[gd_scene load_steps=17 format=3 uid="uid://dxth411l0r36w"]

[ext_resource type="Script" path="res://World/MainMenu.gd" id="1_dvs7h"]
[ext_resource type="FontFile" uid="uid://bd1xos06dc3y1" path="res://Old-Soviet.otf" id="2"]
[ext_resource type="Texture2D" uid="uid://buwgdi11nqumx" path="res://Textures/MenuTexture.png" id="2_1wckd"]
[ext_resource type="Theme" uid="uid://bq8ub6cs4b0fa" path="res://J_theme.tres" id="3"]
[ext_resource type="AudioStream" uid="uid://2xotcmcg0aie" path="res://Sounds/music/kevin-macleod-breath.ogg" id="5_myd0p"]
[ext_resource type="AudioStream" uid="uid://drt8cjcdq1fb5" path="res://Sounds/Фон/neizvsten-zvuk-vetra-v-pustyne.ogg" id="6_2lapx"]
[ext_resource type="Texture2D" uid="uid://dacysj3trknc2" path="res://Textures/Tilelist.png" id="7_etld5"]
[ext_resource type="PackedScene" uid="uid://cuv1t4prwa8y4" path="res://Objects/Clouds/cloud.tscn" id="8_7pcti"]
[ext_resource type="PackedScene" uid="uid://25lhd5786wp8" path="res://Objects/Clouds/cloud3.tscn" id="9_r14qt"]
[ext_resource type="PackedScene" uid="uid://chk8t77vqlq71" path="res://Objects/Clouds/cloud2.tscn" id="10_vbav3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7r7ci"]
atlas = ExtResource("7_etld5")
region = Rect2(576, 128, 64, 64)

[sub_resource type="Animation" id="Animation_abfgl"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6ighi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6iml7"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je1xh"]
_data = {
"Hide": SubResource("Animation_abfgl"),
"RESET": SubResource("Animation_6ighi"),
"Show": SubResource("Animation_6iml7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57olj"]
size = Vector2(82, 1392)

[node name="MainMenu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvs7h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0

[node name="Dark" type="Sprite2D" parent="TextureRect"]
z_index = -3
position = Vector2(960, 540)
texture = ExtResource("2_1wckd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 808.0
offset_right = 1038.0
offset_bottom = 919.0
theme = ExtResource("3")

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "New Game"

[node name="Contin" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "Continue"

[node name="Guide" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "Guide"

[node name="Resol" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "Resolution"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 992.0
offset_right = 1147.0
offset_bottom = 1049.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 45
text = "PIGEON VISION"

[node name="Res" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 1192.0
offset_top = 808.0
offset_right = 1192.0
offset_bottom = 808.0

[node name="OptionButton" type="OptionButton" parent="Res"]
layout_mode = 0
offset_top = 24.0
offset_right = 14.0
offset_bottom = 36.0
theme = ExtResource("3")
theme_override_fonts/font = ExtResource("2")

[node name="Label" type="Label" parent="Res"]
layout_mode = 0
theme_override_fonts/font = ExtResource("2")
text = "Resolution"

[node name="Button" type="Button" parent="Res"]
layout_mode = 0
offset_left = 200.0
offset_right = 275.0
offset_bottom = 23.0
theme = ExtResource("3")
theme_override_fonts/font = ExtResource("2")
text = "Back"

[node name="NW" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 768.0
offset_top = 744.0
offset_right = 768.0
offset_bottom = 744.0

[node name="Label" type="Label" parent="NW"]
layout_mode = 0
theme_override_fonts/font = ExtResource("2")
text = "Are you sure you want to start the new game?"

[node name="HBoxContainer" type="HBoxContainer" parent="NW"]
layout_mode = 0
offset_left = 152.0
offset_top = 24.0
offset_right = 216.0
offset_bottom = 47.0
theme = ExtResource("3")

[node name="Yes" type="Button" parent="NW/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "Yes"

[node name="Container" type="Container" parent="NW/HBoxContainer"]
layout_mode = 2

[node name="No" type="Button" parent="NW/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
text = "No"

[node name="G" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 376.0
offset_top = 712.0
offset_right = 376.0
offset_bottom = 712.0

[node name="Label" type="Label" parent="G"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2")
text = "How to Play:"

[node name="Label3" type="Label" parent="G"]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 277.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("2")
text = "A, D, Left Arrow, Right Arrow - Move to Left and Right.\\nWhitespace, C, Up Arrow - Fly.\\nShift, Righ Mouse, Q - Move Slower.\\nW, S, Down Arrow - Sudden Braking.\\nEsc - Pause."

[node name="Back" type="Button" parent="G"]
layout_mode = 0
offset_left = 16.0
offset_top = 248.0
offset_right = 86.0
offset_bottom = 271.0
mouse_default_cursor_shape = 2
theme = ExtResource("3")
theme_override_fonts/font = ExtResource("2")
text = "Back"

[node name="ER" type="Button" parent="."]
modulate = Color(0.113725, 0.113725, 0.113725, 1)
layout_mode = 0
offset_left = 1804.0
offset_top = 50.0
offset_right = 1874.0
offset_bottom = 73.0
mouse_default_cursor_shape = 2
theme = ExtResource("3")
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "-RUS-"

[node name="Label5" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 1760.0
offset_top = 24.0
offset_right = 1924.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "Language:"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_myd0p")
volume_db = -1.262
pitch_scale = 0.75
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2lapx")
volume_db = -20.0

[node name="Label2" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2")
text = "Made by Redplay_1"

[node name="Label3" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("2")
text = "2023"

[node name="Label6" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 98.0
theme_override_fonts/font = ExtResource("2")
text = "Music by Kevin Macleod,
Marcel Pequel and Aude."

[node name="Label4" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 136.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2")
text = "Version 1.0.1
"

[node name="Con" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0.627451, 1)
position = Vector2(1176, 1010)
texture = SubResource("AtlasTexture_7r7ci")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1936.0
offset_bottom = 1104.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_je1xh")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-518, 642)

[node name="Cloud" parent="." instance=ExtResource("8_7pcti")]
position = Vector2(-936, 512)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(-1062, 804)

[node name="Cloud2" parent="." instance=ExtResource("9_r14qt")]
position = Vector2(-936, 512)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(-566, 1010)

[node name="Cloud3" parent="." instance=ExtResource("10_vbav3")]
position = Vector2(-936, 512)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(1764, 644)

[node name="Marker2D5" type="Marker2D" parent="."]
position = Vector2(1628, 804)

[node name="Marker2D6" type="Marker2D" parent="."]
position = Vector2(1716, 1012)

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2376, -8)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(31, 504)
shape = SubResource("RectangleShape2D_57olj")

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Contin" to="." method="_on_Contin_pressed"]
[connection signal="pressed" from="VBoxContainer/Guide" to="." method="_on_Guide_pressed"]
[connection signal="pressed" from="VBoxContainer/Resol" to="." method="_on_Resol_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="Res/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Res/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NW/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="NW/HBoxContainer/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="G/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ER" to="." method="_on_ER_pressed"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
